fix. 로그인 데이터 중복 저장 수정